changes stateName size to 4rem to prevent overflow

--- a/src/components/Component.css
+++ b/src/components/Component.css
@@ -206,7 +206,7 @@ label {
 }
 
 .stateName {
-  font-size: 5em;
+  font-size: 4em;
   padding-top: 10px;
 }
 
